# chatwithme

./: .sesskey  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
chatwithme/: .sesskey  assistant.py
resources/: clef-api-mistral.txt  cv.txt  pre-prompt.txt
scripts/: deploy-on-remote-ubuntu
tests/: test_assistant.py
