[tool.poetry]
name = "chatwithme"
version = "0.1.0"
description = "Simple chat connected to my AI assistant"
authors = ["plfelter <hurdle0.foggier@icloud.com>"]
license = "Resources"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^1.7.0"
python-fasthtml = "^0.12.14"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
